# parametric-curve-test

./: .gitignore  .gitmodules  Makefile  bspline.cpp  bspline.hpp  bspline.l  bspline_plot.cpp  bspline_plot.sh  calc-bspline.py  calc_bspline.py  compile.sh  eiquadprog_test.cpp  eiquadprog_test.l  main  matrix_append.cpp  matrix_to_vector.cpp  modification.cpp  ng_modification.cpp  online_trajectory_modification.cpp  partial_vector.cpp  plot_bspline.py  qpoases_test.cpp
bspline/: bspline.hpp  bspline_plot.sh  bspline_test.cpp  calc_bspline_coeff_vector.py  show_bspline_test.py
clothoid-test/: a.out  interpolate_newton.cpp  plot_clothoid.py
eiquadprog-test/: matrix_operator.cpp  ng_modification.cpp
osqp-test/: CMakeLists.txt  main.cpp
qpoases-test/: compile.sh  modification_qpoases.cpp  ok_qpoases.cpp  qpoases_test.cpp
